[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seir-epidemic-model"
version = "0.1.0"
requires-python = ">=3.9, <3.12"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "tqdm",
    "streamlit==1.32.2",
    "altair<5",
    "protobuf>=4.21.0"
]
